--- a/desafios/des12/estilo/style.css
+++ b/desafios/des12/estilo/style.css
@@ -1,6 +1,16 @@
 @charset "UTF-8";
 
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -9,6 +19,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header {
@@ -20,6 +31,9 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
+    letter-spacing: 5px;
 }
 
 header > p {
@@ -41,6 +55,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -51,11 +67,34 @@ section.normal {
 section.imagem {
     background-color: rgb(126, 123, 123);
     color: white;
+    box-shadow: 6px 6px 13px 0 black;
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.247);
-    width: 400px;
+    background-color: rgba(0, 0, 0, 0.377);
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 1px 1px 0 black;
+}
+
+section > p {
+    padding-bottom: 2em;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;
+    background-attachment: fixed;
 }
 
 footer {
